client/src/components/style.css
/*** Add Course Dropbox ***/
.autoComplete {
    width: 300px;
}
.dropbox {
    position: absolute;
    width: inherit;
    height: 300px;
    overflow-y: auto;
}

.drop-item{
    z-index: 2;
    width:inherit;
}

/*** customize button ***/
.edit-button {
    background-color: #006C84;
    border: #fff !important;
    width: 100px;
}

.full-button {
    background-color: #006C84;
    border: #fff !important;
    width: 100%;
    display: block;
}

.edit-button:hover,.full-button:hover{
    background-color: #006C84;
    opacity: 0.5;
} 

